kubernetes/legacy/apps/documenso/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: documenso
  namespace: apps
spec:
  parentRefs:
    - name: homeserver-gateway
      namespace: infra
  hostnames:
    - "documenso.k8s.local"
  rules:
    - backendRefs:
        - name: documenso
          port: 3000
